grails-app/assets/stylesheets/app/layout.less
/* ... */
.buttons-margin-bottom .btn {
  margin-bottom: 5px;
}

.mobile {
  .split-modal {
    .left-panel {
      min-height: 0;
      background-color:#fff;
      .left-panel-body {
        height:auto;
      }
    }
  }
  &.mobile-xs {
    .wizard {
      .left-panel {
        min-height:0;
        ul.nav-list {
          display: inline;
          li {
            display: inline-block;
          }
        }
      }
    }
    .with-details {
      > .content {
        opacity:0.5;
      }
      div[ui-view="details"] {
        position: absolute !important;
        top:42px;
        left:20px;
        right: 0;
        bottom: 0;
      }
    }
    .modal-body, .with-details {
      div[ui-view="details"], .modal-body {
        .nav-tabs.nav-justified > li {
          display: table-cell;
          width: 1%;
        }
        .nav-tabs.nav-justified > li > a {
          margin-bottom: 0;
        }
        .nav-tabs.nav-justified > li > a {
          border-bottom: 1px solid #ddd;
          border-radius: 4px 4px 0 0;
        }
        .nav-tabs.nav-justified > .active > a,
        .nav-tabs.nav-justified > .active > a:hover,
        .nav-tabs.nav-justified > .active > a:focus {
          border-bottom-color: #fff;
        }
      }
    }
  }
}

.form-control.select2-container {
  z-index: 1;
  &.select2-container-active.select2-dropdown-open.open {
    z-index: 3;
  }
}

